--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
 			
 			<p>Jack's first grade teacher was named Ms. Mawhfrklawfy</p>
 			
-			<p>Jacks bank pin is 1298 and his password is "defNOTG@Y1234"</p>
+			<p>Jacks bank pin is 1298 and his password is "password"</p>
 			
 			<p>Jack's Social Security number is 078-05-1120</p>
 			
